# de.mrh.mirrorspeech

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  VERSION.txt
pkg/: Configuration.conf
pkg/ApplicationName/Default/: ApplicationName.txt
pkg/ApplicationName/de_DE/: ApplicationName.txt
pkg/LaunchTrigger/de_DE/: LaunchTrigger.mrhit
pkg/LaunchTrigger/en_US/: LaunchTrigger.mrhit
res/pkg/: Configuration.conf
res/pkg/FSRoot/Output/de_DE/: WhatInput.mrhog
res/pkg/FSRoot/Output/en_US/: WhatInput.mrhog
src/: Main.cpp  Revision.h
src/Module/: CheckService.cpp  CheckService.h  MirrorSpeech.cpp  MirrorSpeech.h  SpeechInput.cpp  SpeechInput.h  SpeechOutput.cpp  SpeechOutput.h
src/Module/RepeatAfterMe/: RepeatAfterMe.cpp  RepeatAfterMe.h
